<resources>
    <string name="app_name">Random Number Generator</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="generate">Generate</string>
    <string name="generated">Generated</string>
    <string name="copy_content">Copy</string>
    <string name="clipboard_copy">Copy to clipboard</string>
    <string name="share">Share</string>
    <string name="details">Details</string>
    <string name="generator">Generator details</string>
    <string name="provider">Provider</string>
    <string name="algorithm">Algorithm</string>
    <string name="saved_minimum">SavedMinimumNumber</string>
    <string name="saved_maximum">SavedMaximumNumber</string>
    <string name="error">Error</string>
    <string name="bad_minimum">Invalid minimum number!</string>
    <string name="bad_maximum">Invalid maximum number!</string>
    <string name="bad_input">Invalid number input!</string>
    <string name="bad_range">Invalid number range!</string>
</resources>